[package]
name = "atomic_float"
version = "1.0.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2021"
rust-version = "1.60.0"
license = "Apache-2.0 OR MIT OR Unlicense"
readme = "README.md"
description = "Floating point types which can be safely shared between threads"
keywords = ["atomic", "float", "atomicf32", "atomicf32"]
categories = ["concurrency", "data-structures", "no-std", "rust-patterns"]
repository = "https://github.com/thomcc/atomic_float"
documentation = "https://docs.rs/atomic_float"
homepage = "https://github.com/thomcc/atomic_float"

[features]
default = ["atomic_f64"]
atomic_f64 = []

[dependencies]
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
serde_test = { version = "1", default-features = false }
